[gd_scene load_steps=5 format=3 uid="uid://bi10ewdtb0mah"]

[ext_resource type="Script" path="res://Player.gd" id="1_bw7c5"]
[ext_resource type="Texture2D" uid="uid://djpkcgi5e381j" path="res://Placeholder.png" id="2_syb0v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_et8ig"]
size = Vector2(128, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6kwc0"]
size = Vector2(302.633, 248.932)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.79525, 0.963699)
collision_mask = 4
script = ExtResource("1_bw7c5")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.42541, 0.335104)
texture = ExtResource("2_syb0v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
shape = SubResource("RectangleShape2D_et8ig")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 2.08165e-12)
scale = Vector2(0.422955, 0.336218)
shape = SubResource("RectangleShape2D_6kwc0")

[node name="DamageTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(2.08165e-12, -100)
limit_bottom = 1000
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 2.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.4
drag_right_margin = 0.4

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
